--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Reddit search app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build index.html"
   },
   "author": "Vladko Jovanovski",
   "license": "MIT"
